move from java 17 to java 11